--- a/biome.json
+++ b/biome.json
@@ -10,6 +10,7 @@
     "includes": ["**", "!node_modules", "!.next", "!dist", "!build"]
   },
   "formatter": {
+    "lineWidth": 80,
     "enabled": true,
     "indentStyle": "space",
     "indentWidth": 2
@@ -20,6 +21,9 @@
       "recommended": true,
       "suspicious": {
         "noUnknownAtRules": "off"
+      },
+      "nursery": {
+        "useSortedClasses": "warn"
       }
     },
     "domains": {
